<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/applogo_sol_og_m_ne"
        app:srcCompat="@drawable/applogo" />

    <TextView
        android:id="@+id/textHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Appnavn"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/image"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/textForklaring"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textHeader"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/OppsummeringTekst"
        android:textSize="20sp"
        android:textStyle="normal" />

    <Button
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hent_posisjon"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:layout_marginTop="40dp"
        android:layout_below="@id/textForklaring"/>

    <Button
        android:id="@+id/onboardButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textForklaring"
        android:layout_marginTop="60dp"
        android:text="@string/neste_side"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>